--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5436/postgres
-    username: ######
-    password: ######
+    url: jdbc:postgresql://${DB_CONNECTION_IP}:5432/postgres
+    username: postgres
+    password: postgres
   jpa:
     properties:
       hibernate:
@@ -12,9 +12,11 @@ spring:
           use_jdbc_metadata_defaults: false
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     show-sql: true
+    database: postgresql
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
 
 server:
   port: 8085
